--- a/source/style.scss
+++ b/source/style.scss
@@ -1,18 +1,27 @@
 
 @charset "utf-8";
 
+//
+// COLORS
+//
+
+$textcolor: #83aeb1;
+$bgcolor: #060f0a;
+
+//
+// PAGE FUNDAMENTALS
+//
+
 * {
 	margin: 0;
 	padding: 0;
 }
 
-$textcolor: #888;
-
 html {
 	font-size: 16px;
 	font-family: "Alegreya SC", serif;
-	background: #222;
-	color: #888;
+	background: $bgcolor;
+	color: $textcolor;
 	text-align: center;
 }
 
@@ -34,9 +43,15 @@ em {
 	color: lighten($textcolor, 15%);
 }
 
+//
+// HEADER WITH PAGE TITLE
+//
+
 body > header {
+	margin: 4em;
+
 	h1 {
-		margin: 2em;
+		margin: 1em;
 
 		span {
 			display: block;
@@ -54,10 +69,38 @@ body > header {
 	}
 }
 
+//
+// CHILLAX PARALLAX SCENES
+//
+
+[data-chillax] {
+	margin: 0em auto;
+
+	&::before, &::after {
+		z-index: 1;
+		position: absolute;
+		content: "";
+		display: block;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 0.5em;
+		background: transparentize(darken($bgcolor, 1%), 0.5);
+	}
+
+	&::after {
+		top: auto;
+		bottom: 0;
+	}
+}
+
+//
+// TEXT COPY BETWEEN ILLUSTRATIONS
+//
+
 body > section {
-	margin: auto;
-	margin-top: 4em;
-	padding: 1em;
+	margin: 4em auto;
+	padding: 0 1em;
 
 	h1 {
 		font-size: 1.6em;
